Fix button clicking and extra padding on bottom

--- a/src/input.css
+++ b/src/input.css
@@ -3,7 +3,6 @@
 @tailwind utilities;
 
 html, body {
-    /* height: 100%; */
     height: 100vh;
     margin: 0;
 }
@@ -57,7 +56,6 @@ label input {
 #myContainer span {
     position: absolute;
     top: 0;
-    
     left: 0;
     height: 44px;
     width: 44px;
@@ -68,7 +66,6 @@ label input {
     text-shadow: 0px 0px 4px #CCC29D;
     text-align: center;
     font-size: .75rem;
-    background-image: url(../img/site-off.png)
 }
 
 .check-off > span {
@@ -77,8 +74,12 @@ label input {
 
 }
 
-label input:checked ~ span {
-    background-image: url(../img/site-on.png);
+#myContainer input:not(:checked) ~ span {
+  background-image: url(../img/site-off.png);
+}
+
+#myContainer input:checked ~ span {
+  background-image: url(../img/site-on.png);
 }
 
 
@@ -108,14 +109,6 @@ label input:checked ~ span {
 .play-and-time {
     background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(85,85,85,0.4) 15%, rgba(85,85,85,0.4) 85%, rgba(0,0,0,0) 100%);
 
-}
-
-
-
-.progress {
-    display: flex;
-    height: 20px;
-    margin-top: 10px;
 }
 
 .progress-bar {
